--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <script>
 
-  	//EXO1-2//
+//EXO1-2//
 
     $("#hide").click(function(){
         $("p").hide();
@@ -23,16 +23,17 @@
     $("#show").click(function(){
         $("p").show();
     });
-
-    
-   
     
 //EXO3//
-$("#Changer").click(function(){
+
+	$("#Changer").click(function(){
 
     	$("p").css({"font-family": "courier"});
  });
  
+ //EXO4//
+
+
 
     //Ecrire le JQuery ici
   </script>
