--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
+
 <!DOCTYPE html>
+<!--
 <html>
 <head>
   <meta charset="utf-8">
@@ -31,12 +33,30 @@
     	$("p").css({"font-family": "courier"});
  });
  
- //EXO4//
+-->
+<!--EXO4-->
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Exercice 4</title>
+  <script src="jquery-2.2.4.js"></script>
+</head>
+<body>
+  <ul>
+    <li>Html</li>
+    <li>CSS</li>
+    <li>Javascript</li>
+    <li>PHP</li>
+    <li>...</li>
+  </ul>
+  <script>
+//$("#Changer").click(function(){
 
+//      $("p").css({"font-family": "courier"});
+// });
 
+    $("li").css({"color": "red"});
 
-    //Ecrire le JQuery ici
   </script>
 </body>
-
 </html>
