--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   </script>
 </body>
 </html>-->
-<!--EXO6-->
+<!--EXO6
 <!DOCTYPE html>
 <html>
 <head>
@@ -108,7 +108,34 @@
     <li class="a_cacher">Laravel</li>
   </ol>
 <script>
-  $(".a_cacher").hide();
+  $(".a_cacher").hide();//le point avant acacher est pour le rappel d'une classe
+</script>
+</body>
+</html>-->
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>Exercice 7</title>
+  <script src="jquery-2.2.4.js"></script>
+</head>
+  <ul>
+    <li>Html</li>
+    <li>CSS</li>
+    <li class="a_supprimer">Javascript</li>
+    <li>PHP</li>
+    <li class="a_supprimer">...</li>
+  </ul>
+  <ol>
+    <li class="a_supprimer">JQuery</li>
+    <li>Angular JS</li>
+    <li class="a_supprimer">Node JS</li>
+    <li>BootStrap</li>
+    <li>Symfony</li>
+    <li class="a_supprimer">Laravel</li>
+  </ol>
+<script>
+  $(".a_supprimer").remove();
 </script>
 </body>
 </html>
